Troubleshot layout issues and added annimations to index.html page

--- a/css/styles.css
+++ b/css/styles.css
@@ -184,13 +184,13 @@ a {
 }
 
 .icon-container {
+  align-items: center;
   background: #f3f9fa;
-  width: 64px;
-  height: 64px;
   border-radius: 100%;
   display: inline-flex;
+  height: 64px;
   justify-content: center;
-  align-items: center;
+  width: 64px;
 }
 
 .icon-container--accent {
@@ -206,17 +206,18 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
-  padding: 2rem 3rem;
+  padding: 2rem 3vw; /*It is  good horizontal padding and margin to give in view port percentage, 
+                          for smaller screns its kind of bit larger */
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
 }
 
 .btn .icon {
-  width: 2rem;
   height: 2rem;
   margin-right: 1rem;
   vertical-align: middle;
+  width: 2rem;
 }
 
 .btn--primary {
@@ -297,6 +298,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width:0;   
 }
 
 .input-group .btn {
@@ -743,8 +745,9 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);   /* Move away from design mock up and refine the code, from 3 to 2 cols */
   grid-template-rows: repeat(2, 6rem);
   font-size: 2rem;
   font-weight: 600;
